[package]
name = "debug-datatypes"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
test = []

[dependencies]
arrow = { version = "26.0" }
arrow-schema = { version = "26.0", features = ["serde"] }
bitvec = "1.0"
bytes = { version = "1.1", features = ["serde"] }
datafusion-common = "14.0"
enum_dispatch = "0.3"
num = "0.4"
num-traits = "0.2"
ordered-float = { version = "3.0", features = ["serde"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = { version = "0.7", features = ["backtraces"] }
chrono = "0.4"

[dev-dependencies]
chrono-tz = "0.6"
